Integracion de Sign In con Google + screens

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AppMedisync</string>
+    <string name="web_client_id">860581405853-jt48263k4c275h8r2gt0vltv4gcs1moh.apps.googleusercontent.com</string>
 </resources>
